# ambari

./: .asf.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .reviewboardrc  22201  AMBARI-19367_branch-2.5.patch  AMBARI-21360.patch  AMBARI-22894-trunk.patch  AMBARI-22895-trunck.patch  AMBARI-22945.002.patch  AMBARI-23524.patch  AMBARI-23558.patch  AMBARI-666-CHANGES.txt  CHANGES.txt  DISCLAIMER.txt  Dockerfile  Jenkinsfile  KEYS  LICENSE.txt  NOTICE.txt  README  README.en.md  README.md  README.txt  agent.sh  build-ambari.sh  do_remote.sh  hcfs_noHadoop20.patch  install-ambari-python.sh  jms-1.1.pom  jmxri-1.2.1.pom  jmxtools-1.2.1.pom  nohup.out  pass.txt  pom.xml  pyproject.toml  rat-excludes.txt  server.sh  setup.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull-request-check.yml  tester.yml
agent/: BUILD.txt  pom.xml
ambari-admin/: pom.xml
ambari-agent/: .project  .pydevproject  pom.xml  pom.xml.orig
ambari-api/: pom.xml
ambari-client/: pom.xml
ambari-client/assemblies/: client.xml
ambari-client/groovy-client/: pom.xml
ambari-client/python-client/: pom.xml
ambari-funtest/: pom.xml
ambari-infra/: .gitignore  pom.xml
ambari-infra/ambari-infra-assembly/: pom.xml
ambari-infra/ambari-infra-manager/: .gitignore  README.md  build.xml  pom.xml
ambari-infra/ambari-infra-manager-it/: pom.xml
ambari-infra/ambari-infra-solr-client/: README.md  build.xml  pom.xml
ambari-infra/ambari-infra-solr-plugin/: .gitignore  pom.xml
ambari-logsearch/: .gitignore  README.md  pom.xml
ambari-logsearch/ambari-infra-solr-client/: pom.xml
ambari-logsearch/ambari-infra-solr-plugin/: pom.xml
ambari-logsearch/ambari-logsearch-appender/: .gitignore  README.md  build.properties  build.xml  pom.xml
ambari-logsearch/ambari-logsearch-assembly/: pom.xml
ambari-logsearch/ambari-logsearch-config-api/: pom.xml
ambari-logsearch/ambari-logsearch-config-json/: pom.xml
ambari-logsearch/ambari-logsearch-config-local/: pom.xml
ambari-logsearch/ambari-logsearch-config-solr/: pom.xml
ambari-logsearch/ambari-logsearch-config-zookeeper/: pom.xml
ambari-logsearch/ambari-logsearch-it/: log4j.dtd  pom.xml
ambari-logsearch/ambari-logsearch-logfeeder/: .gitignore  README.md  build.properties  build.xml  pom.xml  pom.xml.rej  run.sh
ambari-logsearch/ambari-logsearch-logfeeder-container-registry/: pom.xml
ambari-logsearch/ambari-logsearch-logfeeder-plugin-api/: pom.xml
ambari-logsearch/ambari-logsearch-portal/: README.md  build.xml  gulpfile.js  package.json  pom.xml  run.sh
ambari-logsearch/ambari-logsearch-server/: .gitignore  README.md  build.properties  build.xml  pom.xml  run.sh
ambari-logsearch/ambari-logsearch-solr-client/: build.xml  pom.xml
ambari-logsearch/ambari-logsearch-web/: .angular-cli.json  .gitignore  Gruntfile.js  LICENSE.txt  README.md  bower.json  build.properties  build.xml  karma.conf.js  package.json  pom.xml  protractor.conf.js  tsconfig.json  webpack.config.js
ambari-logsearch/ambari-logsearch-web-new/: .angular-cli.json  README.md  karma.conf.js  package.json  pom.xml  tsconfig.json
ambari-logsearch/docker/: .gitignore  Dockerfile  all.yml  docker-compose-zookeeper.yml  docker-compose.yml  knox.yml  logsearch-docker.sh  logsearch-logfeeder.yml  logsearch-server.yml  solr.yml  solr662.yml  sso.yml  zookeeper.yml
ambari-metrics/: pom.xml
ambari-metrics/ambari-metrics-alertservice/: pom.xml
ambari-metrics/ambari-metrics-anomaly-detection-service/: pom.xml
ambari-metrics/ambari-metrics-anomaly-detector/: pom.xml
ambari-metrics/ambari-metrics-assembly/: pom.xml
ambari-metrics/ambari-metrics-common/: pom.xml
ambari-metrics/ambari-metrics-flume-sink/: pom.xml
ambari-metrics/ambari-metrics-grafana/: README.md  pom.xml
ambari-metrics/ambari-metrics-hadoop-sink/: pom.xml
ambari-metrics/ambari-metrics-host-aggregator/: pom.xml
ambari-metrics/ambari-metrics-host-monitoring/: pom.xml
ambari-metrics/ambari-metrics-kafka-sink/: pom.xml
ambari-metrics/ambari-metrics-spark/: pom.xml
ambari-metrics/ambari-metrics-storm-sink/: pom.xml
ambari-metrics/ambari-metrics-storm-sink-legacy/: pom.xml
ambari-metrics/ambari-metrics-timelineservice/: pom.xml
ambari-project/: pom.xml
ambari-server/: .classpath  .project  checkstyle.xml  exclude.xml  findbugs.exclude.xml  pass.txt  pom.xml  set-hdp-repo-url.sh  test.result
ambari-server-spi/: pom.xml
ambari-server/conf/: ambari-env.sh  auth.conf  log4j.properties
ambari-server/sbin/: ambari-server
ambari-server/snippet/: Snippet.java
ambari-serviceadvisor/: pom.xml
ambari-shell/: pom.xml
ambari-shell/ambari-groovy-shell/: pom.xml
ambari-shell/ambari-python-shell/: pom.xml
ambari-utility/: pom.xml
ambari-views/: pom.xml
ambari-views/docs/: index.md
ambari-views/examples/: README.md  pom.xml
ambari-web/: README.md  backbone.js  brunch-config.js  config.coffee  copy-pluggable-stack-resources.sh  karma.conf.js  package-lock.json  package.json  pom.xml  public.tgz  set-ambari-version.cmd  set-ambari-version.sh  set-default-stack-version.cmd  set-default-stack-version.sh  toggle-experimental.cmd  toggle-experimental.sh
ambari-web/api-docs/: index.html  swagger-ui.js
ambari-web/app/: app.js  config.js  controllers.js  data_adapter.js  ember.js  initialize.js  mappers.js  messages.js  mixins.js  models.js  router.js  templates.js  utils.js  views.js
beacon/: pom.xml
client/: .classpath  .project  pom.xml
common/: pom.xml
conf/: hms-env.sh
controller/: pom.xml
dev-support/: test-patch.sh  yetus-personality  yetus-wrapper
docs/: pom.xml
examples/: blueprint.json  cluster.json  create_hdfs_cluster.json
hmc/: fileCombinator.php  yuiCombinator.php
mpack-instance-manager/: pom.xml
serviceadvisor/: pom.xml
utility/: pom.xml
(+25881 files in other folders)
